<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ramcaf_blue"
    tools:context=".TermsAndConditions">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="1dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="240dp"
                android:layout_height="198dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ramcaf_logo_with_name" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtDescription"
                android:layout_width="350dp"
                android:layout_height="110dp"
                android:layout_marginTop="220dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcdescription"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTC"
                android:layout_width="350dp"
                android:layout_height="19dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/terms_and_conds"
                android:textColor="@color/ramcaf_yellow"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescription"
                />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTCIntro"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcintro"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTC" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTCAgree"
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcagree"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTCIntro" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTC1"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcitem1"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTCAgree" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTC2"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcitem2"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTC1" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTC3"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcitem3"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTC2" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTC4"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcitem4"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTC3" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTC5"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcitem5"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTC4" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTC6"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcitem6"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTC5" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTC7"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcitem7"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTC6" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTC8"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcitem8"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTC7" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtTCClosing"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/tcclosing"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTC8" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtPrivPolic"
                android:layout_width="350dp"
                android:layout_height="19dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/privacy_policy"
                android:textColor="@color/ramcaf_yellow"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTCClosing" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/txtPrivPolicDesc"
                android:layout_width="350dp"
                android:layout_height="155dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/privpolicy"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivPolic" />

            <Button
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/done"
                android:textColor="@color/black"
                app:backgroundTint="@color/ramcaf_yellow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivPolicDesc"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>