<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ramcaf_blue"
    tools:context=".AdminHome">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-74dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgBGLogo2"
                android:layout_width="227dp"
                android:layout_height="234dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="475dp"
                android:alpha="0.5"
                android:src="@drawable/ramcaf_logo_with_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnAdminLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="158dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="158dp"
                android:layout_marginBottom="80dp"
                android:clickable="true"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="12dp"
                app:backgroundTint="@color/ramcaf_yellow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogs"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtHelloAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/henlo"
                android:textColor="@color/ramcaf_yellow"
                android:textSize="38dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.167"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAdminCafCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text=""
                android:textColor="@color/white"
                android:textSize="23dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtHelloAdmin"
                app:layout_constraintTop_toBottomOf="@+id/txtHelloAdmin" />

            <Button
                android:id="@+id/btnAdminCheckStatus"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/checkSeats"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:backgroundTint="@color/ramcaf_yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAdminCafCount" />

            <Button
                android:id="@+id/btnAdminStatus"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_marginTop="20dp"
                android:clickable="false"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/admin_setTables"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:backgroundTint="@color/ramcaf_yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAdminCheckStatus" />

            <Button
                android:id="@+id/btnLogs"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_marginTop="20dp"
                android:clickable="false"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/admin_viewLogs"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:backgroundTint="@color/ramcaf_yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAdminStatus" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>