<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ramcaf_blue"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ramcaf_blue"
            tools:context=".UserHome">

            <Button
                android:id="@+id/btnUserLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="12dp"
                app:backgroundTint="@color/ramcaf_yellow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSetStatus"
                app:layout_constraintVertical_bias="0.861" />

            <ImageView
                android:id="@+id/imgBGLogo2"
                android:layout_width="227dp"
                android:layout_height="234dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="475dp"
                android:alpha="0.5"
                android:src="@drawable/ramcaf_logo_with_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtHelloUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/henlo"
                android:textColor="@color/ramcaf_yellow"
                android:textSize="38dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.165"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtCafCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text=""
                android:textColor="@color/white"
                android:textSize="23dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtHelloUser"
                app:layout_constraintTop_toBottomOf="@+id/txtHelloUser" />

            <Button
                android:id="@+id/btnCheckStatus"
                android:layout_width="300dp"
                android:layout_height="85dp"
                android:layout_marginTop="112dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/user_checkseats"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:backgroundTint="@color/ramcaf_yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCafCount" />

            <Button
                android:id="@+id/btnSetStatus"
                android:layout_width="300dp"
                android:layout_height="85dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/user_setstatus"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:backgroundTint="@color/ramcaf_yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCheckStatus" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>