<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/ramcaf_blue"
    tools:context=".CheckStatuses">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ramcaf_blue"
            tools:context=".UserCheckSeat">

            <ImageView
                android:id="@+id/imgBGLogo9"
                android:layout_width="227dp"
                android:layout_height="234dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="430dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="70dp"
                android:alpha="0.5"
                android:src="@drawable/ramcaf_logo_with_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/txtHelloUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/user_setstatus"
                android:textAlignment="center"
                android:textColor="@color/ramcaf_yellow"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnStaffSetLong"
                android:layout_width="300dp"
                android:layout_height="85dp"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/user_longtable"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:backgroundTint="@color/ramcaf_yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHelloUser" />

            <Button
                android:id="@+id/btnStaffSetShort"
                android:layout_width="300dp"
                android:layout_height="85dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/chunkfive_ex"
                android:text="@string/user_shorttable"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:backgroundTint="@color/ramcaf_yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnStaffSetLong" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
